# backend-challenges

./: README.md
picpay-desafio-backend/: README.md  modeling.excalidraw
picpay-desafio-backend/picpay-simplified/: Dockerfile  pyproject.toml
picpay-desafio-backend/picpay-simplified/picpay_simplified/: main.py
picpay-desafio-backend/picpay-simplified/picpay_simplified/api/routes/: healthcheck.py  transactions.py  users.py
