[tool.poetry]
name = "picpay-simplified"
version = "0.1.0"
description = ""
authors = ["Natália Oliveira <nataliaferreiraoliveira1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
